# pulse-network

./: README.md
PulseNetwork/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  白皮书-去中心化AI网络.md
PulseNetwork/app/: build.gradle.kts  proguard-rules.pro
PulseNetwork/app/src/main/: AndroidManifest.xml
PulseNetwork/app/src/main/kotlin/com/pulsenetwork/app/: MainActivity.kt  PulseApplication.kt
PulseNetwork/app/src/main/res/drawable/: bg_bubble_ai.xml  bg_bubble_user.xml  bg_input.xml  bg_status_offline.xml  bg_status_online.xml  bg_tag.xml  circular_progress.xml  ic_chat.xml  ic_device.xml  ic_mic.xml  ic_mic_recording.xml  ic_network.xml  ic_send.xml  ic_settings.xml  ic_workflow.xml
PulseNetwork/app/src/main/res/layout/: activity_main.xml  card_evolution.xml  card_network_status.xml  card_prediction.xml  card_relation.xml  fragment_chat.xml  fragment_dashboard.xml  fragment_interview.xml  fragment_network.xml  fragment_settings.xml  fragment_workflow_list.xml  item_interview_message.xml  item_message.xml  item_node.xml
PulseNetwork/app/src/main/res/menu/: bottom_nav_menu.xml
PulseNetwork/app/src/main/res/navigation/: nav_graph.xml
PulseNetwork/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
PulseNetwork/app/src/main/res/xml/: media_config.xml
PulseNetwork/core/native/: build.gradle.kts
PulseNetwork/core/native/src/main/cpp/: CMakeLists.txt
PulseNetwork/core/native/src/main/cpp/jni/: llama_jni.cpp  whisper_jni.cpp
PulseNetwork/data/: build.gradle.kts
PulseNetwork/domain/: build.gradle.kts
(+51 files in other folders)
